--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "react-router-dom": "^6.17.0"
+    "react": "^18.2.0",
+    "react-router-dom": "^6.17.0",
+    "tailwind": "^4.0.0"
   }
 }
