--- a/package.json
+++ b/package.json
@@ -1,7 +1,5 @@
 {
   "dependencies": {
-    "react": "^18.2.0",
-    "react-router-dom": "^6.17.0",
-    "tailwind": "^4.0.0"
+    "react-router-dom": "^6.17.0"
   }
 }
