--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,7 +4,8 @@
   "description": "The back-end of your project will live in this directory.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha",
+    "coverage": "c8 mocha"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,10 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "c8": "^8.0.1",
+    "chai": "^4.3.10",
+    "chai-http": "^4.4.0",
+    "mocha": "^10.2.0",
     "nodemon": "^3.0.1"
   }
 }
