--- a/back-end/package.json
+++ b/back-end/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.6.1",
     "c8": "^8.0.1",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "mongoose": "^8.0.1"
   },
   "devDependencies": {
     "c8": "^8.0.1",
