--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "dotenv": "^16.3.1",
+    "mongoose": "^8.0.1",
     "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
