--- a/back-end/package.json
+++ b/back-end/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.0.1"
   },
   "devDependencies": {
