--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express-validator": "^7.0.1",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.0.1",
     "react-router-dom": "^6.17.0"
   },
