--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -36,5 +36,22 @@ jobs:
             npm test
           fi
 
-      - name: Build and run Docker containers
-        run: docker-compose up --build
+      # - name: Build and run Docker containers
+      #   run: docker-compose up --build
+
+      - name: Deploy React and Express App
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.DROPLET_IP }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          username: ${{ secrets.SSH_USER }}
+          script: |
+            cd 4-final-project-group-bill-splitting-app
+            git pull
+            cd front-end
+            npm install
+            npm start
+            cd ../back-end
+            npm install
+            npm start
+            echo 'Success'
