--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Node.js (for front-end)
         uses: actions/setup-node@v2
         with:
-          node-version: 14
+          node-version: "16"
 
       - name: Install front-end dependencies
         working-directory: ./front-end
