--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,19 +22,19 @@ jobs:
           node-version: "16"
 
       - name: Install front-end dependencies
-        working-directory: ./front-end
-        run: npm install
+        run: |
+          cd front-end
+          npm install
 
       - name: Install back-end dependencies
-        working-directory: ./back-end
-        run: npm install
+        run: |
+          cd back-end
+          npm install
 
       - name: Run back-end tests
-        working-directory: ./back-end
         run: |
-          if [[ ${{ github.event_name }} == 'push' ]]; then
-            npm test
-          fi
+          cd back-end
+          npm test
 
       # - name: Build and run Docker containers
       #   run: docker-compose up --build
