--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Node.js (for front-end)
         uses: actions/setup-node@v2
         with:
-          node-version: "16"
+          node-version: "18"
 
       - name: Install front-end dependencies
         run: |
@@ -30,6 +30,9 @@ jobs:
         run: |
           cd back-end
           npm install
+
+      - name: List contents of the models directory
+        run: ls -l ./back-end/models/
 
       - name: Run back-end tests
         run: |
