--- a/back-end/Dockerfile
+++ b/back-end/Dockerfile
@@ -1,14 +1,11 @@
 # start from the node v16 base image
 FROM node:16
 
-WORKDIR /usr/src/back-end
+#WORKDIR /usr/src/back-end
 
 # install dependencies into the image - doing this first will speed up subsequent builds, as Docker will cache this step
 COPY package*.json ./
-
-RUN npm ci --only=production
-
-RUN npm install nodemon forever -g
+RUN npm install
 
 # copy the remaining app source code into the default directory within the image
 COPY . .
@@ -17,4 +14,4 @@ COPY . .
 EXPOSE 3001
 
 # define the runtime command that will be executed when a container is made from the image
-CMD [ "forever", "-o", "out.log", "-e", "err.log", "app.js" ]
+CMD [ "npm", "start" ]
