--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,12 @@
 version: "3.8"
-
 services:
+
   front-end:
     build: ./front-end
     ports:
       - 3000:80
+    volumes:
+      - ./nginx-config/default.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - back-end
     env_file:
@@ -16,3 +18,5 @@ services:
       - 3001:3001
     env_file:
       - ./back-end/.env
+    volumes:
+      - ./uploads:/uploads
