--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,11 +1,7 @@
-name: Deploy Application
+name: Deploy to DigitalOcean
 
 on:
-  workflow_dispatch:
   push:
-    branches:
-      - cicd
-  pull_request:
     branches:
       - cicd
 
@@ -14,28 +10,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Deploy React and Express App
-        uses: appleboy/ssh-action@master
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.5.2
         with:
-          host: ${{ secrets.DROPLET_IP }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          username: ${{ secrets.SSH_USER }}
-          script: |
-            pwd
-            hostname
-            cd 4-final-project-group-bill-splitting-app
-            git pull origin master
-            # docker-compose down
-            # docker-compose up --build -d
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-            # git pull
-            # cd front-end
-            # npm install
-            # npm start
-            # cd ../back-end
-            # npm install
-            # npm start
-            # echo 'Success'
+      - name: Deploy to DigitalOcean
+        run: |
+          ssh -o "StrictHostKeyChecking=no" ${{ secrets.SSH_USER }}@${{ secrets.DROPLET_IP }} << 'ENDSSH'
+          cd 4-final-project-group-bill-splitting-app
+          git pull origin main
+          docker-compose down
+          docker-compose up --build -d
+          ENDSSH
