--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -6,23 +6,26 @@ on:
       - cicd
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.5.2
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-      - name: Deploy to DigitalOcean
+      # Build and run Docker containers
+      - name: Build and run Docker containers
         run: |
-          ssh -o "StrictHostKeyChecking=no" ${{ secrets.SSH_USER }}@${{ secrets.DROPLET_IP }} << 'ENDSSH'
-          cd 4-final-project-group-bill-splitting-app
-          git pull origin main
-          docker-compose down
           docker-compose up --build -d
-          ENDSSH
+          docker-compose ps
+
+      # SSH and Deploy to DigitalOcean Droplet
+      - name: Deploy to DigitalOcean Droplet
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.DROPLET_IP }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            cd 4-final-project-group-bill-splitting-app
+            git pull origin master
+            docker-compose down
+            docker-compose up --build -d
