--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -3,7 +3,7 @@ name: Deploy to DigitalOcean
 on:
   push:
     branches:
-      - cicd
+      - master
 
 jobs:
   build-and-deploy:
@@ -21,6 +21,6 @@ jobs:
           script: |
             pwd 
             cd 4-final-project-group-bill-splitting-app
-            git pull origin cicd
+            git pull origin master
             docker-compose down
             docker-compose up --build -d
